--- a/website/source/index.html.erb
+++ b/website/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: QUIC
+title: QUIC sample site for CNDF2023
 ---
 
 <div class="mx-auto max-w-7xl">
@@ -11,17 +11,65 @@ title: QUIC
        <p class="text-xl">This is a demo site of <a class="underline" href="https://event.cloudnativedays.jp/cndf2023">CNDF2023</a>.<br />The website may be terminated without any notice.</p>
      </section>
      <section class="mb-6">
-       <h2 class="text-2xl font-bold mb-4">Architecture</h2>
-     </section>
-     <section class="mb-6">
        <h2 class="text-2xl font-bold mb-4">Load test</h2>
        <div id="images" class="flex flex-wrap m-auto" style="max-width:1140px"></div>
      </section>
-     <section>
+     <section class="mb-6">
+        <h2 class="text-2xl font-bold mb-4">Patterns</h2>
+        <dl class="mb-3">
+          <dt>Firebase Hosting</dt>
+          <dd><a href="https://firebase.cndf2023.unasuke.dev" class="underline">https://firebase.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>Cloudflare Pages</dt>
+          <dd><a href="https://cndf2023.unasuke.dev" class="underline">https://cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>AWS CloudFront & S3</dt>
+          <dd><a href="https://aws-cloudfront-s3.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-s3.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>AWS CloudFront & S3 (HTTP/2)</dt>
+          <dd><a href="https://aws-cloudfront-s3-http2.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-s3-http2.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>GCP Cloud Load Balancing & Cloud Storage</dt>
+          <dd><a href="https://gcp-lb-storage.cndf2023.unasuke.dev" class="underline">https://gcp-lb-storage.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>AWS CloudFront & ALB & Fargate (nginx)</dt>
+          <dd><a href="https://aws-cloudfront-fargate-nginx.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-fargate-nginx.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>AWS CloudFront & ALB & Fargate (h2o)</dt>
+          <dd><a href="https://aws-cloudfront-fargate-h2o.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-fargate-h2o.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>AWS NLB & Fargate (nginx)</dt>
+          <dd><a href="https://aws-nlb-fargate-nginx.cndf2023.unasuke.dev" class="underline">https://aws-nlb-fargate-nginx.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>AWS NLB & Fargate (h2o)</dt>
+          <dd><a href="https://aws-nlb-fargate-h2o.cndf2023.unasuke.dev" class="underline">https://aws-nlb-fargate-h2o.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>GCP Cloud Load Barancing & Cloud Run (nginx)</dt>
+          <dd><a href="https://gcp-lb-cloudrun-nginx.cndf2023.unasuke.dev" class="underline">https://gcp-lb-cloudrun-nginx.cndf2023.unasuke.dev</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>GCP Cloud Load Barancing & Cloud Run (h2o)</dt>
+          <dd><a href="https://gcp-lb-cloudrun-h2o.cndf2023.unasuke.dev" class="underline">https://gcp-lb-cloudrun-h2o.cndf2023.unasuke.dev</a></dd>
+        </dl>
+      </section>
+     <section class="mb-6">
         <h2 class="text-2xl font-bold mb-4">Links</h2>
-        <dl>
+        <dl class="mb-3">
           <dt>CloudNative Days Fukuoka 2023</dt>
           <dd><a href="https://event.cloudnativedays.jp/cndf2023" class="underline">https://event.cloudnativedays.jp/cndf2023</a></dd>
+        </dl>
+        <dl class="mb-3">
+          <dt>GitHub repository</dt>
+          <dd><a href="https://github.com/unasuke/cndf2023-infra" class="underline">https://github.com/unasuke/cndf2023-infra</a></dd>
         </dl>
       </section>
    </div>
