Update website (shutdown some subdomains)

--- a/website/source/index.html.erb
+++ b/website/source/index.html.erb
@@ -25,40 +25,40 @@ title: QUIC sample site for CNDF2023
           <dd><a href="https://cndf2023.unasuke.dev" class="underline">https://cndf2023.unasuke.dev</a></dd>
         </dl>
         <dl class="mb-3">
-          <dt>AWS CloudFront & S3</dt>
-          <dd><a href="https://aws-cloudfront-s3.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-s3.cndf2023.unasuke.dev</a></dd>
+          <dt>AWS CloudFront & S3 <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://aws-cloudfront-s3.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>AWS CloudFront & S3 (HTTP/2)</dt>
-          <dd><a href="https://aws-cloudfront-s3-http2.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-s3-http2.cndf2023.unasuke.dev</a></dd>
+          <dt>AWS CloudFront & S3 (HTTP/2) <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://aws-cloudfront-s3-http2.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>GCP Cloud Load Balancing & Cloud Storage</dt>
-          <dd><a href="https://gcp-lb-storage.cndf2023.unasuke.dev" class="underline">https://gcp-lb-storage.cndf2023.unasuke.dev</a></dd>
+          <dt>GCP Cloud Load Balancing & Cloud Storage <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://gcp-lb-storage.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>AWS CloudFront & ALB & Fargate (nginx)</dt>
-          <dd><a href="https://aws-cloudfront-fargate-nginx.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-fargate-nginx.cndf2023.unasuke.dev</a></dd>
+          <dt>AWS CloudFront & ALB & Fargate (nginx) <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://aws-cloudfront-fargate-nginx.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>AWS CloudFront & ALB & Fargate (h2o)</dt>
-          <dd><a href="https://aws-cloudfront-fargate-h2o.cndf2023.unasuke.dev" class="underline">https://aws-cloudfront-fargate-h2o.cndf2023.unasuke.dev</a></dd>
+          <dt>AWS CloudFront & ALB & Fargate (h2o) <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://aws-cloudfront-fargate-h2o.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>AWS NLB & Fargate (nginx)</dt>
-          <dd><a href="https://aws-nlb-fargate-nginx.cndf2023.unasuke.dev" class="underline">https://aws-nlb-fargate-nginx.cndf2023.unasuke.dev</a></dd>
+          <dt>AWS NLB & Fargate (nginx) <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://aws-nlb-fargate-nginx.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>AWS NLB & Fargate (h2o)</dt>
-          <dd><a href="https://aws-nlb-fargate-h2o.cndf2023.unasuke.dev" class="underline">https://aws-nlb-fargate-h2o.cndf2023.unasuke.dev</a></dd>
+          <dt>AWS NLB & Fargate (h2o) <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://aws-nlb-fargate-h2o.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>GCP Cloud Load Barancing & Cloud Run (nginx)</dt>
-          <dd><a href="https://gcp-lb-cloudrun-nginx.cndf2023.unasuke.dev" class="underline">https://gcp-lb-cloudrun-nginx.cndf2023.unasuke.dev</a></dd>
+          <dt>GCP Cloud Load Barancing & Cloud Run (nginx) <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://gcp-lb-cloudrun-nginx.cndf2023.unasuke.dev</del></span></dd>
         </dl>
         <dl class="mb-3">
-          <dt>GCP Cloud Load Barancing & Cloud Run (h2o)</dt>
-          <dd><a href="https://gcp-lb-cloudrun-h2o.cndf2023.unasuke.dev" class="underline">https://gcp-lb-cloudrun-h2o.cndf2023.unasuke.dev</a></dd>
+          <dt>GCP Cloud Load Barancing & Cloud Run (h2o) <b class="font-bold">(stopped)</b></dt>
+          <dd><span><del class="line-through">https://gcp-lb-cloudrun-h2o.cndf2023.unasuke.dev</del></span></dd>
         </dl>
       </section>
      <section class="mb-6">
